# microAuth

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  README.md  accFunctions.py  alembic.ini  default.env  default.json  docker-compose.yml  dockerstart.sh  email.html  gunicorn.conf  gunicorn.sh  main.py  models.py  pyproject.toml  requirements-app.txt  requirements-local.txt  requirements.txt  resetemail.html  supervisord.conf  utils.py
.github/: dependabot.yml
.semaphore/: semaphore.yml
alembic/: env.py
alembic/versions/: fe06b2215a6d_first_migration.py
app/: cli_helpers.py  config.py  create_app.py  db_client.py  init_db.py  main.py  utils.py
app/db/: db_client.py  reset_queries.py  user_queries.py
app/models/: README.md  reset.py  resets.py  user.py  users.py
app/routes/: account.py  admin.py  admins.py  email.py  login_signup.py  reset_verify.py  users.py
app/schemas/: README.md  reset.py  user.py
app/utils/: email.py  emails.py  init_db.py  logger.py  logging.py  security.py  utils.py
email-templates/: password-reset.html  use_this.md  welcome-email.html
tests/: conftest.py  locust_tests.py  test_admin.py  test_db.py  test_email.py  test_login_signup.py  test_resets.py  test_users.py
