[tool.poetry]
name = "microauth"
version = "0.1.0"
description = "Authentication API"
authors = ["Tyler Peterson"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "2.0.5"
alembic = "^1.4.2"
argon2-cffi = "^19.2.0"
fastapi = "^0.59.0"
gunicorn = "^20.0.4"
passlib = "^1.7.2"
psycopg2-binary = "^2.8.5"
pyJWT = "^1.7.1"
python-dotenv = "^0.12.0"
sendgrid = "^6.3.0"
sqlalchemy = "^1.3.16"
ujson = "^2.0.3"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
pre-commit = "^2.2.0"
requests = "^2.23.0"
testcontainers = "^2.6.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
